    - codcif:
      - unused functions process_escapes(), strclone(), strnclone(),
        strappend() and translate_escape().
    - cif_Fcalc:
      - the deprecated '--dump-xyz-coordinates', '--dump-Cromer-Mann',
        '--dump-cell-parameters', '--dump-cell-xyz-coordinates',
        '--dump-sorted-F', '--dump-atoms-and-neighbors', '--dump-test-Fhkl'
        options.
  * Fixed:
    - codcif:
      - added casts to avoid comparisons of integer expressions of
        different signedness.

cod-tools (unreleased)

  * Added:
    - the COD::CIF::DDL::DDLm module;
    - the COD::CIF::DDL::DDLm::Import module;
    - the COD::CIF::DDL::DDLm::Validate module;
    - the 'cif_compare_dics' script;
    - the 'cif_ddl1_dic_check' script;
    - the 'cif_ddlm_dic_check' script;
    - the 'cif_ddlm_dic_print' script;
    - the 'ddl1-to-ddlm' script;
    - the 'ddlm_validate' script;
    - COD::AtomNeighbours:
      - the neighbour_list_to_cif_datablock() subroutine.
    - COD::CIF::Data::CODFlags:
      - the has_partially_occupied_ordered_atoms() subroutine.
    - COD::CIF::Data::ExcludeFromStatistics:
      - the 'has_partially_occupied_ordered_atoms' option to
        exclude_from_statistics() subroutine.
    - cif_find_duplicates:
      - the '--use-attached-hydrogens' option.
    - COD::CIF::DDL:
      - the cif_to_ddlm() subroutine;
      - the ddl1_to_ddlm() subroutine.
    - COD::CIF::DDL::Validate:
      - the canonicalise_tag() subroutine.
    - cif_validate:
      - the '--range-su-multiplier' option;
      - the '--ddl1-add-dictionary', '--ddl1-dictionaries',
        '--ddl1-clear-dictionaries' options;
      - the '--ddl2-add-dictionary', '--ddl2-dictionaries',
        '--ddl2-clear-dictionaries' options;
      - the '--ddlm-add-dictionary', '--ddlm-dictionaries',
        '--ddlm-clear-dictionaries' options;
      - the '--add-ddlm-import-path' and '--clear-ddlm-import-path' options;
      - the '--report-missing-su' and '--no-report-missing-su' options.