@@ -18,7 +18,6 @@ our @EXPORT_OK = qw(
     gj_elimination_non_zero_elements
     forward_elimination
     back_substitution
-    backward_elimination
 );
 
 # A default factor to multiply machine espsilon to get the value
@@ -137,13 +136,6 @@ sub forward_elimination
     } if 0;
 
     return \@m;
-}
-
-# The 'backward_elimination' name is deprecated and retained only for
-# compatibility
-sub backward_elimination
-{
-    return &back_substitution
 }
 
 # Subtract one row (a vector) multiplied by a coefficient from another
