@@ -95,6 +95,10 @@ cod-tools (3.0.0)
         '--dump-cell-parameters', '--dump-cell-xyz-coordinates',
         '--dump-sorted-F', '--dump-atoms-and-neighbors', '--dump-test-Fhkl'
         options.
+    - COD::Algebra::GaussJordan:
+      - the deprecated backward_elimination() subroutine.
+    - COD::Algebra::GaussJordanBigRat:
+      - the deprecated backward_elimination() subroutine.
   * Fixed:
     - codcif:
       - added casts to avoid comparisons of integer expressions of
